--- a/vue_audience_advisor_prep.html
+++ b/vue_audience_advisor_prep.html
@@ -7,6 +7,10 @@
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <style>
+        body {
+          margin: 10px 100px;
+        }
+
         pre {
           background-color: #eee;
           border-radius: 10px;
@@ -38,6 +42,7 @@
       <div><input type="text" v-model="ticket_num" placeholder="ticket_num" />         <span>(e.g., SAI9876)</span></div>
       <div><input type="text" v-model="date" placeholder="date" />               <span>(e.g., 20240131)</span></div>
 
+      <h2>AWS</h2>
       <pre>
         -----------------
         List Directories
@@ -52,6 +57,8 @@
         aws --profile nyc s3 cp <span>{{source_file_3}}</span> s3://samsung.ads.data.share/analytics/custom/<span>{{user_name}}</span>/audiencetransfer/<span>{{ticket_num}}</span>/<span>{{date}}</span>/<span>{{audience_3_id}}</span>.csv 
       </pre>
 
+
+      <h2>s3 Import</h2>
       <pre>
         -- import audience 1
         DROP TABLE IF EXISTS capi_audience_<span>{{audience_1_id}}</span>;
@@ -75,6 +82,7 @@
         file_format = (format_name = adbiz_data.analytics_csv);
       </pre>
 
+      <h2>UDW Merge Audience Options</h2>
       <pre>
         -- =====================================
         -- MERGE AUDIENCES (per ticket request)
