added input color

--- a/vue_audience_advisor_prep.html
+++ b/vue_audience_advisor_prep.html
@@ -25,6 +25,10 @@
         div {
           padding: 5px;
         }
+
+        input {
+          color: red;
+        }
     </style>
 </head>
 <body>
